test/message/instanceof-nonobject.out
*%(basename)s:30: TypeError: right-hand side is not an object
1 instanceof 2;
  ^
TypeError: right-hand side is not an object
    at *%(basename)s:30:3
